updated local and remote properties

--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -1,4 +1,4 @@
 webdriver.baseUrl = https://arcadia.spb.ru
 webdriver.browser = CHROME
 webdriver.browserVersion = 128.0
-webdriver.remote = https://user1:1234@selenoid.autotests.cloud/wd/hub
+webdriver.remote = https://user1:1234@selenoid.autotests.cloud/wd/hub/
