--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ repositories {
 
 dependencies {
     testImplementation(
+            "com.codeborne:selenide:7.10.1",
+            "org.slf4j:slf4j-simple:2.0.7",
             "org.junit.jupiter:junit-jupiter-api:5.10.0",
             "org.seleniumhq.selenium:selenium-java:4.39.0",
             "org.junit.jupiter:junit-jupiter-engine:5.10.0",
